--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: scala
 scala:
   - 2.11.8
 jdk: oraclejdk8
+after_success:
+  - 'if [[ $TRAVIS_PULL_REQUEST == "false" ]]; then bash ./deploy.sh; fi'
