--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: scala
-scala:
-  - 2.11.8
-  - 2.12.1
-script: 'sbt ++$TRAVIS_SCALA_VERSION "testOnly * -- -l com.lynbrookrobotics.potassium.PerfTest"'
+script: 'sbt "+ testOnly * -- -l com.lynbrookrobotics.potassium.PerfTest"'
 jdk: oraclejdk8
 after_success:
   - 'if [[ $TRAVIS_PULL_REQUEST == "false" ]]; then bash ./deploy.sh; fi'
