--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: scala
+install:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+  - npm install
+  - npm install jsdom
 script: 'sbt "+ testOnly * -- -l com.lynbrookrobotics.potassium.PerfTest"'
 jdk: oraclejdk8
 after_success:
