Use Codecov to report code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ script:
   - 'sbt coverageAggregate'
 jdk: oraclejdk8
 after_success:
-  - 'sbt coveralls'
+  - 'bash <(curl -s https://codecov.io/bash)'
   - 'if [[ $TRAVIS_PULL_REQUEST == "false" ]]; then bash ./deploy.sh; fi'
