--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - npm install
   - npm install jsdom
 script:
-  - 'sbt "+ testOnly * -- -l com.lynbrookrobotics.potassium.PerfTest" "coverageReport"'
+  - 'sbt "clean" "coverage" "+ testOnly * -- -l com.lynbrookrobotics.potassium.PerfTest" "coverageReport"'
   - 'sbt coverageAggregate'
 jdk: oraclejdk8
 after_success:
