Turn off dead letter logging

--- a/remote/src/main/resources/client-test.conf
+++ b/remote/src/main/resources/client-test.conf
@@ -10,7 +10,10 @@ akka {
     }
   }
 
-  log-sent-messages = on
-  log-received-messages = on
+  log-sent-messages = off
+  log-received-messages = off
+
+  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
 }
 
