--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ jdk: oraclejdk8
 after_success:
   - 'bash <(curl -s https://codecov.io/bash)'
   - 'if [[ $TRAVIS_PULL_REQUEST == "false" ]]; then bash ./deploy.sh; fi'
+cache:
+   directories:
+   - $HOME/.coursier
