Attempt to fix remote test failures by not using localhost

--- a/remote/src/main/resources/client-test.conf
+++ b/remote/src/main/resources/client-test.conf
@@ -5,7 +5,7 @@ akka {
   remote {
     enabled-transports = ["akka.remote.netty.udp"]
     netty.udp {
-        hostname = "localhost"
+        hostname = "127.0.0.1"
         port = 11846
     }
   }
@@ -16,4 +16,3 @@ akka {
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
 }
-
