--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ install:
   - nvm use stable
   - npm install
   - npm install jsdom
-  - rvm use 2.2.3 --install --fuzzy
+  - rvm use 2.3.3 --install --fuzzy
   - gem update --system
   - gem install sass
-  - gem install jekyll -v 3.2.1
+  - gem install jekyll
 script:
   - mkdir -p ~/.sbt/0.13/plugins
   - echo 'addSbtPlugin("io.get-coursier" % "sbt-coursier" % "1.0.0-RC5")' > ~/.sbt/0.13/plugins/build.sbt
