--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - gem install jekyll
 script:
   - mkdir -p ~/.sbt/0.13/plugins
-  - echo 'addSbtPlugin("io.get-coursier" % "sbt-coursier" % "1.0.0-RC5")' > ~/.sbt/0.13/plugins/build.sbt
+  - echo 'addSbtPlugin("io.get-coursier" % "sbt-coursier" % "1.0.0")' > ~/.sbt/0.13/plugins/build.sbt
   - 'sbt "clean" "coverage" "test" "coverageReport"'
   - 'sbt coverageAggregate'
 jdk: oraclejdk8
