--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: scala
 branches:
   only:
     - master
+before_install:
+  - curl https://raw.githubusercontent.com/scala-native/scala-native/v0.3.6/bin/travis_setup.sh | bash -x
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install stable
