Split up native tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 script:
   - mkdir -p ~/.sbt/0.13/plugins
   - echo 'addSbtPlugin("io.get-coursier" % "sbt-coursier" % "1.0.0")' > ~/.sbt/0.13/plugins/build.sbt
-  - 'sbt "clean" "coverage" "jvm/test" "js/test" "native/test" "coverageReport"'
+  - 'sbt "clean" "coverage" "jvm/test" "js/test" "coreNative/test" "modelNative/test" "controlNative/test" "frcNative/test" "sensorsNative/test" "commonsNative/test" "coverageReport"'
   - 'sbt coverageAggregate'
 jdk: oraclejdk8
 after_success:
