--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ install:
   - mkdir -p ~/.sbt/0.13/plugins
   - echo 'addSbtPlugin("io.get-coursier" % "sbt-coursier" % "1.0.0")' > ~/.sbt/0.13/plugins/build.sbt
 script:
-  - 'sbt clean coverage testAll coverageReport coverageAggregate'
+  - 'sbt clean scalafixTest coverage testAll coverageReport coverageAggregate'
+  - ./scalafmt --test
 jdk: oraclejdk8
 after_success:
   - 'bash <(curl -s https://codecov.io/bash)'
